--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -28,21 +28,21 @@
   </div>
 </div>
 <div class="tbl-body">
-  <div class="row" style="padding-top: 10px;">
+  <div class="row" style="padding-top: 10px;" *ngFor="let dresult of dashboardResults">
   <div class="col-md-1">
     <img src="/assets/img/forklift_yellow_h7.png">
     <label title="Driver Signed IN" class="nameLabel person_name" >
-      <i class="material-icons" style="font-size:21px;">person_pin</i> Gangaraju
+      <i class="material-icons" style="font-size:21px;">person_pin</i> {{dresult.driver_name}}
     </label>
-    <label title="Device Subription ends on 2018/08/25" class="colorTheme bgColorTheme3 time-lapse">
-      <i class="material-icons" style="font-size:21px;">timelapse</i> 2018/08/25 &nbsp; 
+    <label title="Device Subription ends on {{dresult.subscription_ends | date : 'short'}}" class="colorTheme bgColorTheme3 time-lapse">
+      <i class="material-icons" style="font-size:21px;">timelapse</i> {{dresult.subscription_ends | date:'shortDate'  }} &nbsp; 
     </label>
-    <label title="Vehicle is Stopped" class="nameLabel ng-binding device-status-stop"  >Stop</label>
+    <label title="Vehicle is {{dresult.status}}" >{{dresult.status}}</label>
   </div>
   <div class="col-md-1">
     <div class="row">
       <div class="col-md-6">
-          <label >Hosur ,India</label>
+          <label>{{dresult.address}}</label>
       </div>
       <div class="col-md-6">
           <i class="material-icons">map</i>
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="col-md-1">
-      2018/07/09 14:15:22
+      {{dresult.updated_at}}
   </div>
   <div class="col-md-2">
  
@@ -59,20 +59,21 @@
  
   </div>
   <div class="col-md-1">
-      <img title="Ignition (Engine) OFF" class="dashboard-sensors"  src="/assets/img/dashboard_icon_ignition_off.svg">
-      <!-- <img title="Ignition (Engine) OFF" class="dashboard-sensors ng-hide" ngShow="data.Ignition =='-'" src="/assets/img/dashboard_icon_ignition_off.svg"> -->
+      <img title="Ignition (Engine) OFF" class="dashboard-sensors" *ngIf="dresult.ignition_status == 'off' "  src="/assets/img/dashboard_icon_ignition_off.svg"/>
+      <img title="Ignition (Engine) OFF" class="dashboard-sensors" *ngIf="dresult.ignition_status == 'on' "  src="/assets/img/dashboard_icon_ignition_on.svg"/> 
   </div>
   <div class="col-md-1">
-      <img title="A/C ON" class="dashboard-sensors" ng-show="data.AC == 'N'" src="/assets/img/dashboard_icon_ac_inactive.svg">
-      <!-- <img title="A/C ON" class="dashboard-sensors ng-hide" ng-show="data.AC == 'Y'" src="assets/img/dashboard_icon_ac_on.svg"> -->
+      <img title="A/C {{dresult.ac_status}}" class="dashboard-sensors" *ngIf="dresult?.ac_status == 'off' " src="/assets/img/dashboard_icon_ac_inactive.svg">
+      <img title="A/C {{dresult.ac_status}}" class="dashboard-sensors" *ngIf="dresult.ac_status == 'on' " src="assets/img/dashboard_icon_ac_on.svg">
   </div>
   <div class="col-md-1">
-      <img title="Door OPEN" class="dashboard-sensors ng-hide" ng-show="data.Door == 'Y'" src="/assets/img/dashboard_icon_door_open.svg">
-      <!-- <img title="Door CLOSED" class="dashboard-sensors" ng-show="data.Door == 'N' || data.Door == '-' || data.Door == ''" src="assets/img/dashboard_icon_door_inactive.svg"> -->
+      <img title="Door OPEN" class="dashboard-sensors ng-hide" *ngIf="dresult.door_status == 'Y'" src="/assets/img/dashboard_icon_door_open.svg">
+      <img title="Door CLOSED" class="dashboard-sensors" *ngIf="dresult.door_status == 'N' || dresult.door_status == '-' || dresult.door_status == ''" 
+            src="assets/img/dashboard_icon_door_inactive.svg">
   </div>
   <div class="col-md-1">
-      <img title="Temperature" ng-show="data.Temeperature<-70" src="assets/img/dashboard_icon_temperature_inactive.svg" class="ng-hide" width="100%">
-      <!-- <img title="Temperature" ng-show="data.Temeperature>-70 &amp;&amp; data.Temeperature<25" src="/assets/img/dashboard_icon_temperature_cold.svg" class="" width="100%"> -->
+      <img title="Temperature"*ngIf="dresult.temperature > 16" src="assets/img/dashboard_icon_temperature_inactive.svg" class="ng-hide" width="100%">
+      <img title="Temperature" *ngIf="dresult.temperature < 16 " src="/assets/img/dashboard_icon_temperature_cold.svg" class="" width="100%">
   </div>
 </div>
 </div>
