--- a/src/app/mapping/device/device.component.html
+++ b/src/app/mapping/device/device.component.html
@@ -1,18 +1,18 @@
 <div class="row">
 
   <div class="col-md-2"></div>
-  <div class="col-md-8 form-inline" >
+  <div class="col-md-6 form-inline" >
     <label for="rangepicker">Date Range : </label>
-      <input id="rangepicker" name="rangepicker" onkeydown="return false" class="form-control col-md-8" type="text"
+      <input id="rangepicker" name="rangepicker"  class="form-control col-md-8" type="text"
         required/>
   </div>
-  <div class="col-md-2">
-    <label  for="case">Select Case</label>
+  <div class="col-md-4">
+    <label  for="case">Select Device</label>
     <div class="form-group col-sm-6 pull-right ">
-      <select class="form-control" [(ngModel)]="case_id" id="case" (change)="show_filtered_pins()">
-        <option selected="" value="undefined" disabled>--Select Date--</option>
-        <option *ngFor="let case of cases" [ngValue]="case.id">
-          {{case.first_name + ' ' +case.last_name }}
+      <select class="form-control"  id="device_id" [(ngModel)]="device_id" (change)="show_filtered_pins()">
+        <option selected="" value="undefined" disabled>--Select Device--</option>
+        <option *ngFor="let device of devices" [ngValue]="device.id">
+         {{device.name}}
         </option>
       </select>
     </div>
