--- a/src/app/report/vehicle-report/vehicle-report.component.html
+++ b/src/app/report/vehicle-report/vehicle-report.component.html
@@ -3,7 +3,7 @@
       <div class="form-group col-md-4 mb-2">
         <label for="staticEmail2" >Vehicle</label>
         <select class="pull-right form-control col-md-8" [(ngModel)]="vehicle.vehicle_number" name="vehicle_number" (change)="set_vehicle_number()">
-          <option  *ngFor="let r of vehicles" [ngValue]="r">{{r}}</option>
+          <option  *ngFor="let r of devices" [ngValue]="r.id">{{r.name}}</option>
         </select>
       </div>
       <div class="form-group col-md-4">
@@ -33,8 +33,8 @@
             <th>#</th>
             <th>Vechicle Description</th>
             <th>Date</th>
-            <th>Time</th>
-            <th>Lat/Lon</th>
+            <th>Latitude</th>
+            <th>Longitude</th>
             <th>Speed Km/hr</th>
             <th>Altitude metres</th>
             <th>Odometer km</th>
