--- a/src/app/report/ignition/ignition.component.html
+++ b/src/app/report/ignition/ignition.component.html
@@ -22,21 +22,19 @@
   <table id="table_id" class="display">
       <thead>
           <tr>
-              <th>#</th>
-              <th>Vechicle Description</th>
-              <th>Date</th>
-              <th>Time</th>
-              <th>Status</th>
-              <th>Lat/Lon</th>
-              <th>Speed Km/hr</th>
-              <th>Altitude metres</th>
-              <th>Odometer km</th>
-              <th>Address</th>
-              <th>Fuel Volume</th>
-              <th>Temperature</th>
-              <th>AC</th>
-              <th>Fuel Difference</th>
-  
+                <th>#</th>
+                <th>Vechicle Description</th>
+                <th>Date</th>
+                <th>Latitude</th>
+                <th>Longitude</th>
+                <th>Speed Km/hr</th>
+                <th>Altitude metres</th>
+                <th>Odometer km</th>
+                <th>Address</th>
+                <th>Fuel Volume</th>
+                <th>Temperature</th>
+                <th>AC</th>
+                <th>Fuel Difference</th>    
           </tr>
       </thead>
       
