--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -8,29 +8,36 @@
               <div class="card-body">
                 <h1>Login</h1>
                 <p class="text-muted">Sign In to your account</p>
+                <form method="post" (ngSubmit)="loginForm.form.valid && do_login()" #loginForm="ngForm">
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username">
+                  <input type="email" [(ngModel)]="login.email" class="form-control" required name="username" placeholder="Username">
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password">
+                  <input type="password" [(ngModel)]="login.password" name="password" required class="form-control" placeholder="Password">
                 </div>
                 <div class="row">
                   <div class="col-6">
-                    <button type="button" class="btn btn-primary px-4">Login</button>
+                    <button type="submit" [disabled]="loginForm.form.invalid" class="btn btn-primary px-4">Login</button>
                   </div>
                   <div class="col-6 text-right">
                     <button type="button" class="btn btn-link px-0">Forgot password?</button>
                   </div>
                 </div>
+                <div class="row">
+                <div class="col-6 text-right">
+                  <p class="text-danger">{{errors}}</p>
+                </div>
+              </div>
+              </form>
               </div>
             </div>
-            <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+            <!-- <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                 <div>
                   <h2>Sign up</h2>
@@ -38,7 +45,7 @@
                   <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
